--- a/Parallel_Programming_Final_Project.ipynb
+++ b/Parallel_Programming_Final_Project.ipynb
@@ -78,7 +78,7 @@
         "id": "ic5wawzwSl4o"
       },
       "source": [
-        "# **<h1 align='center'> <b> 🌻 LỜI NÓI ĐẦU 🌻</b> </h1>**"
+        "# **<h1 > <b> 🌻 LỜI NÓI ĐẦU 🌻</b> </h1>**"
       ],
       "id": "ic5wawzwSl4o"
     },
@@ -121,7 +121,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# I. ***THỰC HIỆN TUẦN TỰ***"
+        "# ***I. THỰC HIỆN TUẦN TỰ***"
       ],
       "metadata": {
         "id": "3Mmhpfu-q37b"
@@ -576,7 +576,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ***III TỐI ƯU HÓA***"
+        "# ***III. TỐI ƯU HÓA***"
       ],
       "metadata": {
         "id": "mk6kCvZ2rn9M"
