--- a/RunOnColab.ipynb
+++ b/RunOnColab.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "!nvcc host.cu -o host.out\n",
-    "!./host.out original_image.ppm 400"
+    "!./host.out broadcast.ppm 500"
    ]
   },
   {
@@ -33,7 +33,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_img(\"/content/original_image.ppm\", \"original image\")\n",
+    "# !nvcc host.cu -o host.out\n",
+    "# !./host.out broadcast.ppm 500\n",
+    "\n",
+    "show_img(\"/content/broadcast.ppm\", \"original image\")\n",
+    "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
+    "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")\n",
+    "show_img(\"/content/out_device_v2_rgb.ppm\", \"device resize image\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvcc host.cu -o host.out\n",
+    "!./host.out lady.ppm 400\n",
+    "\n",
+    "show_img(\"/content/lady.ppm\", \"original image\")\n",
+    "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
+    "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvcc host.cu -o host.out\n",
+    "!./host.out clock.ppm 500\n",
+    "\n",
+    "show_img(\"/content/clock.ppm\", \"original image\")\n",
     "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
     "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")"
    ]
