--- a/RunOnColab.ipynb
+++ b/RunOnColab.ipynb
@@ -33,13 +33,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !nvcc host.cu -o host.out\n",
-    "# !./host.out broadcast.ppm 500\n",
+    "!nvcc host.cu -o host.out\n",
+    "!./host.out broadcast.ppm 500\n",
     "\n",
     "show_img(\"/content/broadcast.ppm\", \"original image\")\n",
     "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
     "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")\n",
-    "show_img(\"/content/out_device_v2_rgb.ppm\", \"device resize image\")"
+    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")"
    ]
   },
   {
@@ -53,7 +53,8 @@
     "\n",
     "show_img(\"/content/lady.ppm\", \"original image\")\n",
     "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
-    "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")"
+    "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")\n",
+    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")"
    ]
   },
   {
@@ -67,7 +68,8 @@
     "\n",
     "show_img(\"/content/clock.ppm\", \"original image\")\n",
     "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
-    "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")"
+    "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")\n",
+    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")"
    ]
   }
  ],
