upload base of v2

--- a/RunOnColab.ipynb
+++ b/RunOnColab.ipynb
@@ -39,7 +39,8 @@
     "show_img(\"/content/broadcast.ppm\", \"original image\")\n",
     "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
     "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")\n",
-    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")"
+    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")\n",
+    "show_img(\"/content/out_device_v2_rgb.ppm\", \"device resize v2 image\")"
    ]
   },
   {
@@ -54,7 +55,8 @@
     "show_img(\"/content/lady.ppm\", \"original image\")\n",
     "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
     "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")\n",
-    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")"
+    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")\n",
+    "show_img(\"/content/out_device_v2_rgb.ppm\", \"device resize v2 image\")"
    ]
   },
   {
@@ -69,7 +71,8 @@
     "show_img(\"/content/clock.ppm\", \"original image\")\n",
     "show_img(\"/content/out_host_rgb.ppm\", \"host resize image\")\n",
     "show_img(\"/content/out_device_rgb.ppm\", \"device resize image\")\n",
-    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")"
+    "show_img(\"/content/out_device_v1_rgb.ppm\", \"device resize v1 image\")\n",
+    "show_img(\"/content/out_device_v2_rgb.ppm\", \"device resize v2 image\")"
    ]
   }
  ],
